# gpt-copy-v3

./: .env.example  .gitignore  AGENTS.md  README.md
.codedungeon/: README.md  project-rules.compact.md  project-rules.json  project-rules.md
.codedungeon/commands/: cleanup-tasks.md  code-review.md  codedungeon-loop.md  codedungeon-test-loop.md  codedungeon.md  main-quest.md  one-shot.md  side-quest.md
.codedungeon/phases/: arena-tests.md  armory-decomposition.md  crucible-qa-refine.md  entrance-hall-validation.md  forge-execution.md  guild-quarter-domain.md  laboratory-test-decomp.md  throne-room-report.md  trap-workshop-qa.md  war-room-architect.md
.codedungeon/plans/: lite-streaming.md
.codedungeon/reports/: final-report.md  run-1.md
.codedungeon/state/: phase-0-output.md  phase-1-output.md  phase-35-output.md  phase-4-output.md  phase-5-output.md  phase-55-output.md  phase-56-output.md  phase2-handoff.md  phase5-handoff.md  phase6-handoff.md  phase7-handoff.md
.codex/: config.toml
.codex/agents/: cd_api_tester.toml  cd_architect_planner.toml  cd_backend_planner.toml  cd_dev_worker.toml  cd_e2e_tester.toml  cd_qa_planner.toml  cd_review_classifier.toml  cd_review_newhire.toml  cd_review_saboteur.toml  cd_review_security.toml  cd_review_spec.toml  cd_review_validator.toml  cd_task_architect.toml  cd_test_reviewer.toml
backend/: .env.example  Cargo.toml  README.md
backend/src/: lib.rs  main.rs
backend/tests/: api_tests.rs
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
prompts/: full-v3.txt
(+28 files in other folders)
